--- a/Booking/src/app/places/discover/place-detail/place-detail.page.html
+++ b/Booking/src/app/places/discover/place-detail/place-detail.page.html
@@ -3,10 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button defaultHref="/places/tabs/discover"></ion-back-button>
     </ion-buttons>
-    <ion-title>Place detail</ion-title>
+    <ion-title>{{ place.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-button color="primary" margin (click)="onBookPlace()"> Book</ion-button>
+<ion-content padding>
+  <ion-button color="primary" margin (click)="onBookPlace()">Book</ion-button>
 </ion-content>
